erDiagram
    %% EventEase Entity Relationship Diagram (Figure 4 in SRS)
    USERS ||--o{ EVENTS : organizes
    USERS ||--o{ REGISTRATIONS : registers
    USERS ||--o{ ATTENDANCE : attends
    USERS ||--o{ FAVORITES : bookmarks
    USERS ||--o{ NOTIFICATIONS : receives
    USERS ||--o{ FEEDBACK : reviews
    USERS ||--o{ CONTACT_MESSAGES : inquires
    
    EVENTS ||--o{ REGISTRATIONS : reserves
    EVENTS ||--o{ ATTENDANCE : verifies
    EVENTS ||--o{ FEEDBACK : collects
    EVENTS ||--o{ GALLERY : features

    USERS {
        string UserId PK
        string Name
        string Email
        string Password_AuthId
        string Phone
        string Role
        string ProfileImage
        string Status
        timestamp CreatedAt
    }

    EVENTS {
        string EventId PK
        string OrganizerId FK
        string Title
        string Description
        string Category
        timestamp Date
        string StartTime
        string EndTime
        string Location
        int MaxParticipants
        string Status
        string ImageUrl
        timestamp CreatedAt
    }

    REGISTRATIONS {
        string RegistrationId PK
        string EventId FK
        string UserId FK
        timestamp RegisteredAt
        string Status
        string QRCode
    }

    ATTENDANCE {
        string AttendanceId PK
        string RegistrationId FK
        string EventId FK
        string UserId FK
        boolean Attended
        timestamp CheckedInAt
    }

    FAVORITES {
        string FavoriteId PK
        string UserId FK
        string EventId FK
        timestamp CreatedAt
    }

    NOTIFICATIONS {
        string NotificationId PK
        string UserId FK
        string EventId FK
        string Title
        string Message
        boolean IsRead
        timestamp CreatedAt
    }

    FEEDBACK {
        string FeedbackId PK
        string EventId FK
        string UserId FK
        int Rating
        string Comment
        timestamp SubmittedAt
    }

    GALLERY {
        string MediaId PK
        string EventId FK
        string UploadedBy FK
        string ImageUrl
        string Caption
        timestamp UploadedAt
    }

    CONTACT_MESSAGES {
        string MessageId PK
        string UserId FK
        string Name
        string Email
        string Subject
        string Message
        timestamp SubmittedAt
    }
